[package]
name = "web_demo"
version = "0.1.0"
authors = ["Dmytro Liashko <dmytro.liashko@medicore.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12"
mime = "0.3.13"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"